Signed-off-by: Km.Van <kmvan.com@gmail.com>

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -933,7 +933,7 @@ label.error{
  * .hentry
  */
 .hentry .panel-heading{
-	margin-bottom: 20px;
+	/*margin-bottom: 20px;*/
 }
 /**
  * .singluar-post
