Signed-off-by: Km.Van <kmvan.com@gmail.com>

--- a/includes/account-notification/static/css/min/style.css
+++ b/includes/account-notification/static/css/min/style.css
@@ -1,1 +1,1 @@
-.list-group-item .media-heading{margin-bottom:10px;font-size:1em}.list-group-item .excerpt p{background:rgb(245,245,245);border:1px solid rgba(0,0,0,.1);border-radius:4px;padding:5px 10px;display:inline-block}.list-group-item.type-special-event .media-left .fa{font-size:60px}
+.list-group-item .media-heading{margin-bottom:10px;font-size:1em}.list-group-item .excerpt p{background:#f5f5f5;border:1px solid rgba(0,0,0,.1);border-radius:4px;padding:5px 10px;display:inline-block}.list-group-item.type-special-event .media-left .fa{font-size:60px}
