recode ajax comment
Signed-off-by: Km.Van <kmvan.com@gmail.com>

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -562,6 +562,16 @@ label.error{
 	#commentform label{
 		font-weight: normal;
 	}
+/**
+ * #comment-pagination-container
+ */
+#comment-pagination-container{
+	text-align: center;
+}
+	#comment-pagination-container a{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 
 /** 
  * #comments
