optimized ajax comment template optimized core function comments optimized custom avatar optimized frontend css optimized header topbar tools fixing custom post point
Signed-off-by: Km.Van <kmvan.com@gmail.com>

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -577,6 +577,7 @@ label.error{
  * #goto-comment
  */
 #goto-comment{
+	display: none;
 	float: right;
 	color: #fff;
 }
@@ -1436,6 +1437,6 @@ label.error{
 	#slidebox .fill{height: 320px;}
 }
 @media (min-width: 1300px){
-	.container{width: 1300px;}
-	#slidebox .fill{height: 342px;}
+	/*.container{width: 1300px;}*/
+	/*#slidebox .fill{height: 342px;}*/
 }
