completed search page completed tag page optimized custom post point js optimized ajax comment js optimized header icon optimized crumb nav optimized pagination range arg
Signed-off-by: Km.Van <kmvan.com@gmail.com>

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -1008,6 +1008,9 @@ label.error{
 		margin: 20px 0;
 		
 	}
+		#post-point-loading-ready{
+			display: none;
+		}
 		.singluar-post .post-point a{
 			position: relative;
 		}
