--- a/includes/custom-post-storage/static/css/src/style.css
+++ b/includes/custom-post-storage/static/css/src/style.css
@@ -17,4 +17,8 @@
 .post-download-module .pwd{
 	/*margin-bottom: 10px;*/
 	text-align: center;
+	-webkit-user-select: all;
+	-moz-user-select: all;
+	-ms-user-select: all;
+	user-select: all;
 }
