--- a/static/css/src/backend/style.css
+++ b/static/css/src/backend/style.css
@@ -1,5 +1,4 @@
-.clr:after{clear: both;content:'.';display: block;overflow:hidden;visibility:hidden;font-size:0;line-height:0;width:0;height:0;}.before-icon{margin-right: .5rem;}.after-icon{margin-left:.5rem;}
-
+.clr:after{clear: both;content:'.';display: block;overflow:hidden;visibility:hidden;font-size:0;line-height:0;width:0;height:0;}
 @media screen and (max-width: 767px) {
   .hide-on-mobile {
     display: none !important;
@@ -78,6 +77,8 @@ fieldset{
 	background:-webkit-gradient(linear,from(rgb(250,251,253)),to(rgb(245,245,245)));
 
 	box-shadow:0 0 0 1px white inset;
+
+	
 }
 	fieldset legend{
 		margin-left:10px;
@@ -96,6 +97,7 @@ fieldset{
 		font-weight:bold;
 		font-size:15px;
 		box-shadow:0 0 6px rgba(0,0,0,0.05),0 0 0 1px white inset;
+
 	}
 @media screen and (-webkit-min-device-pixel-ratio:0){fieldset legend{border-top-width:2px;}}
 fieldset:hover{
@@ -268,7 +270,6 @@ html .regular-text:hover{
 }
 
 #backend-tab .tabbtn .tx{
-	padding-left: 5px;
 	display: none;
 }
 
