--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -11,6 +11,10 @@
 	margin-left: -10px;
 	margin-right: -10px;
 }
+.container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header{
+	margin-left: -10px;
+	margin-right: -10px;
+}
 .navbar-form,
 .navbar-left,
 .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand{
@@ -34,14 +38,17 @@
 .container-fluid,
 .navbar-collapse,
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
-	/*padding-left: 10px;
-	padding-right: 10px;*/
+	padding-left: 10px;
+	padding-right: 10px;
 }
 .navbar-toggle{
 	margin-left: 10px;
 }
+.navbar-form{
+	margin: 10px -10px;
+}
 .navbar-nav{
-	/*margin: 0 -10px;*/
+	margin: 5px -10px;
 }
 .nav-tabs > li > a{
 }
@@ -1387,6 +1394,9 @@ label.error{
 		font-weight: bold;
 		font-size: 12px;
 		opacity: .7;
+	}
+	.widget .user-list img{
+		width: 100%;
 	}
 	.widget .user-list:hover img{
 		opacity: .8;
