--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -832,13 +832,18 @@ label.error{
 
 
 /**
- * #banner
+ * .banner
  */
 .banner{
-	margin-bottom: -70px;
+	display: block;
+	margin-bottom: -20px;
 	border-radius: 0 0 4px 4px;
 	box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
+	.banner img{
+		width: 100%;
+	}
+
 .main-nav{
 	margin-top: 20px;
 	border: none;
