changed wp_parse_args() to array_merge() fixed the fucking QQ open sign can not sign-in

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -848,6 +848,7 @@ label.error{
 	margin-top: 20px;
 	border: none;
 	box-shadow: 0 1px 3px rgba(0,0,0,.3);
+	border-radius: 0;
 }
 
 .menu-header .navbar-nav > li > a{
@@ -1443,9 +1444,6 @@ label.error{
 @media (min-width: 768px){
 	.dropdown:hover .dropdown-menu {
 		display: block;
-	}
-	.main-nav{
-		background: rgba(255,255,255,.7);
 	}
 	.navbar-nav{
 		margin: 0;
