optimized dropdown-menu css removed views from page fixed open sign for qq

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -5,9 +5,13 @@
 .pager{
 	margin: 0;
 }
-.btn-group:hover .dropdown-menu{
+.btn-group:hover > .dropdown-menu{
 	margin-top: 0px;
 	display: block;
+}
+.btn-group .dropdown-menu{
+	left: auto;
+	right: 0;
 }
 
 .list-group-item{
