added post rated for incr/decr points optimized point history list optimized custom contribution optimized theme size

--- a/includes/custom-account/static/css/src/style.css
+++ b/includes/custom-account/static/css/src/style.css
@@ -63,6 +63,6 @@
 	.history-group .point-value.plus{
 		color: #D9534F;
 	}
-	.history-group .point-value.times{
+	.history-group .point-value.minus{
 		color: #5cb85c;
 	}
