--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -94,6 +94,18 @@ label{
 	padding: 20px 20px 0 20px;
 }
 
+.panel-primary .panel-heading a{
+	color:#fff;
+}
+	.panel-primary .panel-heading small{
+		color:#fff;
+	}
+	.panel-primary .panel-heading a:hover,
+	.panel-primary .panel-heading a:active,
+	.panel-primary .panel-heading a:focus{
+		color:#fff;
+		text-shadow: 0 1px 1px #000;
+	}
 /**
  * global =====================================================
  */
@@ -227,7 +239,7 @@ img{
 		}
 		.mx-panel-heading-extra .keywords a:hover,
 		.mx-panel-heading-extra .keywords a:active{
-			color:#333;
+			color:#eee;
 		}
 /**
  * .avatar
@@ -401,6 +413,7 @@ img{
 
 	.widget_rank .media-left{
 		position: relative;
+		overflow: hidden;
 	}
 
 	.widget_rank .list-group-item:before{
@@ -1447,23 +1460,34 @@ label.error{
 		position: absolute;
 		top: 0;
 		right: 10px;
-		background: rgba(0,0,0,.5);
+		background: rgba(217,83,79,.6);
 		color:#fff;
 		border-radius: 4px;
 		padding: 0 3px;
 		font-weight: bold;
 		font-size: 12px;
-		opacity: .7;
 	}
+	.widget .user-list .avatar-container{
+		position: relative;
+	}
+		.widget .user-list .placeholder{
+			opacity: 0;
+		}
+		.widget .user-list .avatar{
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
 	.widget .user-list img{
 		width: 100%;
 	}
-	.widget .user-list:hover img{
+	.widget .user-list:hover .avatar{
 		opacity: .8;
 	}
 	.widget .user-list:hover .extra{
 		opacity: 1;
-		
+		background: #d9534f;
+		box-shadow: 0 0 3px rgba(0,0,0,.3);
 	}
 /**
  * .pager
