--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -14,14 +14,23 @@
 
 .slides .overflow{
 	width: 100%;
-	height: 320px;
+	max-height: 320px;
 	overflow: hidden;
+	border-radius: 2px;
 }
 .slides img{
 	display: block;
 	width: 100%;
 }
+.slides .post-thumbnail{
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+}
+
 .slides a{
+	position: relative;
 	float: left;
 	width: 20%;
 }
