--- a/includes/setting-import/static/css/src/backend.css
+++ b/includes/setting-import/static/css/src/backend.css
@@ -1,20 +1,18 @@
-#tis_upload_area{
+#theme_import_settings-upload-area{
 	position:relative;
 	display:inline-block;
 	overflow:hidden;
 }
-#tis_tip{
+#theme_import_settings-tip{
 	margin-bottom:5px;
 }
-#tis_file{
+#theme_import_settings-file{
 	position:absolute;
-	top:-20px;
-	right:-20px;
+	top:-10px;
+	right:-10px;
 	font-size:99px;
 	opacity:0;
-	filter:alpha(opacity=0);
 	cursor:pointer;
 	margin:0;
 	padding:0;
-	font-family:sans-serif;
 }
